@@ -1720,6 +1720,7 @@ CREATE TABLE rttickets (
   netnodeid int(11) DEFAULT NULL,
   netdevid int(11) DEFAULT NULL,
   verifierid int(11) DEFAULT NULL,
+  deadlinetime int(11) DEFAULT NULL,
   PRIMARY KEY (id),
   INDEX queueid (queueid),
   INDEX customerid (customerid),
@@ -3378,4 +3379,4 @@ INSERT INTO netdevicemodels (name, alternative_name, netdeviceproducerid) VALUES
 ('XR7', 'XR7 MINI PCI PCBA', 2),
 ('XR9', 'MINI PCI 600MW 900MHZ', 2);
 
-INSERT INTO dbinfo (keytype, keyvalue) VALUES ('dbversion', '2018051400');
+INSERT INTO dbinfo (keytype, keyvalue) VALUES ('dbversion', '2018051500');
