@@ -237,6 +237,7 @@ define('RTMESSAGE_NETNODE_CHANGE', 1024);
 define('RTMESSAGE_PRIORITY_CHANGE', 2048);
 define('RTMESSAGE_NETDEV_CHANGE', 4096);
 define('RTMESSAGE_VERIFIER_CHANGE', 8192);
+define('RTMESSAGE_DEADLINE_CHANGE', 16384);
 
 // Messages status and type
 define('MSG_NEW', 1);
