@@ -24,6 +24,9 @@
  *  $Id$
  */
 
+$_LANG['Deadline time:'] = 'Termin ostateczny:';
+$_LANG['Deadline time expired:'] = 'Zgłoszenie z przeterminowanym <br> terminem ostatecznym:';
+$_LANG['Ticket deadline has been set to $a.:'] = 'Termin ostateczny zgłoszenia został ustawiony jako $a:';
 $_LANG['Verifier:'] = 'Weryfikator:';
 $_LANG['Unassigned'] = 'Nieprzypisany';
 $_LANG['Requestor:'] = 'Zgłaszający';
