@@ -111,10 +111,16 @@ function RTSearch($search, $order='createtime,desc')
 	}
 
 	if(!empty($search['netnodeid']))
-		$where[] = 'netnodeid = '.intval($search['netnodeid']);
-	
+		$where[] = 't.netnodeid = '.intval($search['netnodeid']);
+
 	if(!empty($search['netdevid']))
-		$where[] = 'netdevid = '.intval($search['netdevid']);
+		$where[] = 't.netdevid = '.intval($search['netdevid']);
+
+	if(!empty($search['verifierid']))
+		$where[] = 't.verifierid = '.intval($search['verifierid']);
+
+	if(!empty($search['expired']))
+		$where[] = 't.deadlinetime < ?NOW?';
 
 	if(isset($where))
 		$where = ' WHERE '.implode($op, $where);
@@ -124,13 +130,13 @@ function RTSearch($search, $order='createtime,desc')
 			.$DB->Concat('UPPER(customers.lastname)',"' '",'customers.name').'
 			END AS requestor, t.requestor AS req, t.createtime,
 			(CASE WHEN m.lastmodified IS NULL THEN 0 ELSE m.lastmodified END) AS lastmodified, t.deleted, t.deltime,
-			t.priority
+			t.priority, t.verifierid, t.deadlinetime
 			FROM rttickets t
 			LEFT JOIN (SELECT MAX(createtime) AS lastmodified, ticketid FROM rtmessages GROUP BY ticketid) m ON m.ticketid = t.id
 			LEFT JOIN rtticketcategories tc ON t.id = tc.ticketid
 			LEFT JOIN rtqueues ON (rtqueues.id = t.queueid)
 			LEFT JOIN vusers ON (t.owner = vusers.id)
-			LEFT JOIN vusers AS e ON (t.verfier_userid = vusers.id)
+			LEFT JOIN vusers AS e ON (t.verifierid = vusers.id)
 			LEFT JOIN customers ON (t.customerid = customers.id)'
 			.(isset($where) ? $where : '')
 			.($sqlord !='' ? $sqlord.' '.$direction:'')))
