@@ -237,6 +237,7 @@ if(isset($_POST['ticket']))
 			'netnodeid' => empty($ticketedit['netnodeid']) ? null : $ticketedit['netnodeid'],
 			'netdevid' => empty($ticketedit['netdevid']) ? null : $ticketedit['netdevid'],
 			'verifierid' => empty($ticketedit['verifierid']) ? null : $ticketedit['verifierid'],
+			'deadlinetime' => empty($ticketedit['deadlinetime']) ? null : $ticketedit['deadlinetime'],
 		);
 		$LMS->TicketChange($ticketedit['ticketid'], $props);
 
